// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PersonalInformationPanel /> should renders with all props correctly 1`] = `
<div
  className="panel panel-secondary open"
>
  <div
    className="panel-heading"
  >
    <div
      className="control-group right"
    >
      <PTButton
        className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-expand"
        />
        <i
          className="btn-icon fa fa-compress"
        />
      </PTButton>
      <PTButton
        className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-chevron-up"
        />
      </PTButton>
    </div>
    <h3
      className="panel-title"
    >
      Test tile
    </h3>
  </div>
  <div
    className="panel-body"
  />
</div>
`;

exports[`Component <PersonalInformationPanel /> should renders with all props correctly 2`] = `
<div
  className="panel panel-secondary open"
>
  <div
    className="panel-heading"
  >
    <div
      className="control-group right"
    >
      <PTButton
        className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-expand"
        />
        <i
          className="btn-icon fa fa-compress"
        />
      </PTButton>
      <PTButton
        className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-chevron-up"
        />
      </PTButton>
    </div>
    <h3
      className="panel-title"
    >
      Test tile
    </h3>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="panel-control"
    >
      <div
        className="wrap-control-group"
      >
        <div
          className="control-group right"
        >
          <PTButton
            className="btn btn-success btn-inverse btn-edit"
            onClick={[Function]}
          >
            <i
              className="fa fa-edit"
            />
             Edit
          </PTButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PersonalInformationPanel /> should renders with all props correctly 3`] = `
<div
  className="panel panel-secondary open"
>
  <div
    className="panel-heading"
  >
    <div
      className="control-group right"
    >
      <PTButton
        className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-expand"
        />
        <i
          className="btn-icon fa fa-compress"
        />
      </PTButton>
      <PTButton
        className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-chevron-up"
        />
      </PTButton>
    </div>
    <h3
      className="panel-title"
    >
      Test tile
    </h3>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="panel-control"
    >
      <div
        className="wrap-control-group"
      >
        <div
          className="control-group right"
        >
          <PTButton
            className="btn btn-danger"
            onClick={[Function]}
          >
            <i
              className="fa fa-ban"
            />
             Cancel
          </PTButton>
          <PTButton
            className="btn btn-success"
            onClick={[Function]}
          >
            <i
              className="fa fa-check"
            />
             Complete
          </PTButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PersonalInformationPanel /> should renders with all props correctly 4`] = `
<div
  className="panel panel-secondary open"
>
  <div
    className="panel-heading"
  >
    <div
      className="control-group right"
    >
      <PTButton
        className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-expand"
        />
        <i
          className="btn-icon fa fa-compress"
        />
      </PTButton>
      <PTButton
        className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
        onClick={[Function]}
      >
        <i
          className="btn-icon fa fa-chevron-up"
        />
      </PTButton>
    </div>
    <h3
      className="panel-title"
    >
      Test tile
    </h3>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="panel-control"
    >
      <div
        className="wrap-control-group"
      >
        <div
          className="control-group right"
        >
          <PTButton
            className="btn btn-danger"
            onClick={[Function]}
          >
            <i
              className="fa fa-ban"
            />
             Cancel
          </PTButton>
          <PTButton
            className="btn btn-success"
            onClick={[Function]}
          >
            <i
              className="fa fa-check"
            />
             Complete
          </PTButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;
